--- a/static/style.css
+++ b/static/style.css
@@ -64,7 +64,7 @@ html, body{
   text-decoration: none;
 }
 
-#sign-success, #event-success, #perfil-success {
+#sign-success {
   box-shadow: 6px 6px 29px -10px rgba(0,0,0,0.51);
   width: 30%;
   position: fixed;
@@ -426,7 +426,6 @@ html, body{
 .fb-profile img.fb-image-lg{
     z-index: 0;
     width: 100%;
-    height: 400px;
     margin-bottom: 10px;
 }
 
@@ -434,8 +433,7 @@ html, body{
 {
     margin: -90px 10px 0px 50px;
     z-index: 9;
-    width: 210px;
-    height: 180px;
+    width: 20%;
 }
 
 @media (max-width:768px)
