--- a/static/style.css
+++ b/static/style.css
@@ -426,6 +426,7 @@ html, body{
 .fb-profile img.fb-image-lg{
     z-index: 0;
     width: 100%;
+    height: 400px;
     margin-bottom: 10px;
 }
 
@@ -433,7 +434,8 @@ html, body{
 {
     margin: -90px 10px 0px 50px;
     z-index: 9;
-    width: 20%;
+    width: 210px;
+    height: 180px;
 }
 
 @media (max-width:768px)
@@ -443,15 +445,6 @@ html, body{
     font-weight: 700;
     font-size:16px;
 }
-
-.fb-image-profile
-{
-    margin: -45px 10px 0px 25px;
-    z-index: 9;
-    width: 20%;
-}
-
-
 
 
 /*body > #container {
