--- a/static/style.css
+++ b/static/style.css
@@ -346,6 +346,54 @@ html, body{
 
 #descImg{
   padding-top: 20px;
+  text-align: justify;
+}
+
+#descImg dl{
+  background-image: -moz-linear-gradient(bottom, #D5E1DD, 30%, #ffffff);
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #77BED2;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#descImg dt{
+  padding-left: 20px;
+}
+#descImg dd{
+  text-align: center;
+}
+
+#eventImg1{
+  width: 100%;
+}
+
+#eventAddress{
+
+}
+
+#eventDate{
+
+}
+
+#eventHour{
+
+}
+
+#rowImg{
+  display: inline-block;
+}
+
+#rowImg img{
+  width: 100%;
+  max-height: 175px;
 }
 
 #wrapper hr{
@@ -424,14 +472,18 @@ html, body{
 }
 
 .fb-profile img.fb-image-lg{
+    background-image: url("./anonimoportada.jpg");
     z-index: 0;
     width: 100%;
     height: 400px;
     margin-bottom: 10px;
 }
 
+
+
 .fb-image-profile
 {
+    background-image: url("./anonimoportada.jpg");
     margin: -90px 10px 0px 50px;
     z-index: 9;
     width: 210px;
